Finished compensation slider + front-end homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,91 +21,77 @@
       <img src="https://res.cloudinary.com/tark-industries/image/upload/v1548672018/forest_back.png">
     </div>
   </div>
-
+  
   <div id="section2">
+    <div class= "home__frame">
+      <div class="logo-vert">
+        <img src="https://res.cloudinary.com/tark-industries/image/upload/v1548508989/LOGO_TREEP_VERT.png">
+      </div>
 
-    <div class="logo-vert">
-      <img src="https://res.cloudinary.com/tark-industries/image/upload/v1548508989/LOGO_TREEP_VERT.png">
-    </div>
+      <div class="ccm">
+        <h5>Comment ça marche ?</h5>
+      </div>
 
-    <div class="ccm">
-      <h5>Comment ça marche ?</h5>
-    </div>
+      <div class="container__solution">
 
-    <div class="ticket-dette">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-5">
-            <img src="https://res.cloudinary.com/tark-industries/image/upload/v1548511349/ticket.png">
-          </div>
-          <div class="col-sm-1"></div>
-          <div class="col-sm-6">
-            <h4>Notre solution: la dette écologique</h4>
-          <h5>Pour chaque trajet, Treep calcule le nombre de km, le modèle de l’avion et sa consommation puis en déduit le rejet de Co2 par passager.</h5>
+        <div class="ticket">
+          <img src="https://res.cloudinary.com/tark-industries/image/upload/v1548511349/ticket.png">
+        </div>
+
+        <div class="solution">
+          <h4>Notre solution: la dette écologique</h4>
+          <h5 style="text-align:justify;">Pour chaque trajet, Treep calcule le nombre de km, le modèle de l’avion et sa consommation puis en déduit le rejet de Co2 par passager.</h5>
           <h5 class="def-dette">La dette écologique c’est le prix du nombre d’arbres nécessaire pour compenser les rejets de Co2 d’un voyage.</h5>
+        </div>
+
+      </div>
+
+      <div class="container__explications">
+
+        <div class="explication__1">
+          <div style="text-align:center;margin-bottom: 17px;">
+            <img class="number" src="https://res.cloudinary.com/tark-industries/image/upload/v1548514473/treep_expl1.png">
+          </div>
+          <h4>Treep paye une partie de votre dette écologique.</h4>
+          <h5>Lorsque vous passez par Treep, vous avez déja fait un pas.</h5>
+          <h5>En effet une partie de votre dette est financée par les commissions que Treep perçoit lorsque vous réservez votre billet.
+          Environ 6% de votre dette est automatiquement prise en charge par Treep.</h5>
+          <div class="boutons__explication" style="margin-top: 10px;">
+            <a class="section2-button white-tooltip" href="#" data-toggle="tooltip" data-html="true" data-placement="bottom" title="<h6>Nous plantons des arbres avec 80% de nos bénefices !</h6>
+            <p>Lorsque vous selectionnez un billet, vous êtes redirigé chez l’un de nos partenaires. Pour ce service, Treep gagne environ 2,2% du prix de votre billet. Avec 80% des bénefices que chaque utilisateur nous rapporte, nous commençons le paiement de sa dette écologique. Donc en passant par Treep vous avez déjà commencé a rembourser la planète ! <br>
+            Les 20% restant nous permettent de stocker de l'argent pour de futur projets, améliorations du site.</p>">
+              Transparence financière
+            </a>
+            <a class="section2-button white-tooltip" href="#" data-toggle="tooltip" data-html="true" data-placement="bottom" title="<h6>Treep gagne de l'argent grâce a vous !</h6>
+            <p>En effet à chaque fois que nous vous redirigeons vers une compagnie aérienne ou une agence de voyage, celle-ci nous rémunère en retour. C'est entre 1 et 3% du prix de votre billet. Mais vous le savez déjà, nos bénéfices permettent de financer une partie de votre dette écologique.
+            D'autre part nous gagnons aussi de l'argent grâce aux publicitées. <br>
+            Cliquez sur le boutton pour pouvoir acceder à nos rapports financiers.</p>">
+              Les revenues de Treep
+            </a>
           </div>
         </div>
-      </div>
-    </div>
 
-    <div class="explications1et2">
-      <div class="container">
-        <div class="row">
-          <div class="explication1">
-            <div class="col-sm">
-              <img class="number1" src="https://res.cloudinary.com/tark-industries/image/upload/v1548514473/treep_expl1.png">
-              <h4>Treep paye une partie de votre dette écologique.</h4>
-              <h5>Lorsque vous passez par Treep, vous avez déja fait un pas. <br> En effet une partie de votre dette est financée par les comissions que Treep perçoit lorsque vous réservez votre billet.
-              Environ 6% de votre dette est automatiquement prise en charge par Treep.</h5>
-              <div class="row">
-                <div class="col-sm">
-                  <a class="section2-button" href="#">Transparence financière</a>
-                  <div class="text-button">
-                    <div class="square-but"></div>
-                    <h6>Nous plantons des arbres avec 80% de nos bénefices !</h6>
-                    <p>Lorsque vous selectionnez un billet, vous êtes redirigé chez l’un de nos partenaires. Pour ce service, Treep gagne environ 2,2% du prix de votre billet. Avec 80% des bénefices que chaque utilisateur nous rapporte, nous commençons le paiement de sa dette écologique. Donc en passant par Treep vous avez déjà commencé a rembourser la planète ! <br>
-                    Les 20% restant nous permettent de stocker de l'argent pour de futur projets, améliorations du site.</p>
-                  </div>
-                </div>
-                <div style="margin-left: -20%" class="col-sm">
-                  <a class="section2-button" href="#">Les revenues de Treep</a>
-                  <div style="width: 140%" class="text-button wider-text-button">
-                    <div class="square-but"></div>
-                    <h6>Treep gagne de l'argent grâce a vous !</h6>
-                    <p>En effet à chaque fois que nous vous redirigeons vers une compagnie aérienne ou une agence de voyage, celle-ci nous rémunère en retour. C'est entre 1 et 3% du prix de votre billet. Mais vous le savez déjà, nos bénéfices permettent de financer une partie de votre dette écologique.
-                    D'autre part nous gagnons aussi de l'argent grâce aux publicitées. <br>
-                    Cliquez sur le boutton pour pouvoir acceder à nos rapports financiers.</p>
-                  </div>
-                </div>
-              </div>
+        <div class="explication__2">
+          <div>
+            <div style="text-align:center;margin-bottom: 17px;">
+              <img class="number" src="https://res.cloudinary.com/tark-industries/image/upload/v1548514472/treep_expl2.png">
             </div>
+            <h4>Vous avez le choix !<br>Votre dette est entre vos seules mains.</h4>
           </div>
-          <div class="explication2">
-            <div class="col-sm">
-              <img class="number2" src="https://res.cloudinary.com/tark-industries/image/upload/v1548514472/treep_expl2.png">
-              <h4>Vous avez le choix.<br>Votre dette est entre vos mains seules.</h4>
-              <h5>Dès lors que Treep à rempli sa mission, le reste est entre vos mains, vous pouvez remboursez partiellement ou entièrement votre dette écologique!</h5>
-              <div class="row">
-                <div style="margin-right: -20px" class="col-sm">
-                  <a style="margin-right: -20px;" class="section2-button" href="#">Comment est calculée la dette ?</a>
-                  <div class="text-button text-button2">
-                    <div class="square-but sq1"></div>
-                    <h6>Des meilleurs calculs a venir!</h6>
-                    <p>Ce site n'est encore qu'un MVP (prototype), la dette n'est pas encore calculée en prenant en compte le modèle de l'avion. D'autre part ce ne sont pas nos calculs, nous les avons pris sur le site suivant : www.bad-request </p>
-                  </div>
-                </div>
-                <div class="col-sm">
-                  <a class="section2-button" href="#">Comment payer la dette ?</a>
-                  <div style="width: 130%; margin-left: -100px;" class="text-button text-button2">
-                    <div class="square-but sq2"></div>
-                    <h6>Dans votre Dashboard. <br>
-                    Ou consultez l'onglet qui s'affiche lors de votre achat.</h6>
-                    <p>Vous pouvez consulter tout vos voyages sur votre compte. D'autre part dès que vous selectionnez un billet, un onglet va s'ouvrir. Et voilà <br>
-                    Ps: Ne vous culpabilisez pas si c'est trop chère !</p>
-                  </div>
-                </div>
-              </div>
-            </div>
+          <h5>Dès lors que Treep à rempli sa mission, le reste est entre vos mains, vous pouvez remboursez partiellement ou entièrement votre dette écologique!</h5>
+          <div class="boutons__explication">
+            <a class="section2-button white-tooltip" href="#" data-toggle="tooltip" data-html="true" data-placement="bottom" title="
+            <h6>Des meilleurs calculs a venir!</h6>
+            <p>Ce site n'est encore qu'un MVP (prototype), la dette n'est pas encore calculée en prenant en compte le modèle de l'avion. Découvrez notre méthode de calcul du C02 émis lors des vols en cliquant sur ce lien.</p>">
+              Comment est calculée la dette ?
+            </a>
+            <a class="section2-button white-tooltip" href="#" data-toggle="tooltip" data-html="true" data-placement="bottom" title="
+              <h6>Dans votre Dashboard. <br>
+                Ou consultez l'onglet qui s'affiche lors de votre achat.</h6>
+              <p>Vous pouvez consulter tout vos voyages sur votre compte. D'autre part dès que vous sélectionnez un billet un onglet s'ouvre, vous indiquant comment compenser les émissions à venir du voyage que vous avez choisi. Et voilà! <br>
+              Ps: Ne vous culpabilisez pas si c'est trop chère !</p>">
+              Comment payer la dette ?
+            </a>
           </div>
         </div>
       </div>
@@ -119,8 +105,8 @@
       <a href="https://www.instagram.com/"><img src="https://res.cloudinary.com/tark-industries/image/upload/v1548766811/insta-treep.png"></a> <br>
       <a href="https://twitter.com/"><img src="https://res.cloudinary.com/tark-industries/image/upload/v1548766819/tweeter-treep.png"></a> <br>
     </div>
-
-    <div class="container container-footer1">
+    
+    <div class="container-footer1">
       <div class="row">
         <div class="col-sm-3">
           <a href="#">Qui sommes nous ?</a>
@@ -148,7 +134,7 @@
       </div>
     </div>
 
-    <div class="container container-footer2">
+    <div class="container-footer2">
       <div class="row">
         <div class="col-sm">
           <h5>Sites Internationaux</h5>
@@ -225,7 +211,7 @@
       </div>
     </div>
 
-    <div class="container container-footer3">
+    <div class="container-footer3">
       <div class="row">
         <div class="col-sm">
           <p>Confidentialité</p>
@@ -240,7 +226,7 @@
     </div>
 
     <div class="text-footer">
-    <p>Trouvez votre voyage sur Treep.com, Comparez parmis des centaines de fournisseurs pour avoir les meilleurs prix et ce chaque jour. Trouvez des billets de vols pas cher et écologique. Touts les billets internationaux sont disponibles, recherchez parmis les companies aériennes les plus prisé et les plus populaire. Treep c’est la garantie de trouver un billet d’avion pas cher. N’attendez plus pour décuovrir toute nos destinantions. </p>
+    <p>Trouvez votre voyage sur Treep.com, Comparez parmis des centaines de fournisseurs pour avoir les meilleurs prix et ce chaque jour. Trouvez des vols pas cher et écologique. Tous les billets internationaux sont disponibles, recherchez parmis les compagnies aériennes les plus prisées et les plus populaires. Treep c’est la garantie de trouver le billet d’avion qu'il vous faut. N’attendez plus pour découvrir toute nos destinations. </p>
     </div>
 
   </div>
