--- a/app/assets/stylesheets/components/_compensation.scss
+++ b/app/assets/stylesheets/components/_compensation.scss
@@ -4,6 +4,7 @@
     flex-direction: column;
     width: 80%;
     margin: auto;
+    padding-bottom: 50px;
 }
 
 .compensation__stats__container {
@@ -71,6 +72,10 @@
 	  display: flex;
 	  align-items: center;
 	}
+
+    li:hover {
+      background-color: #36ACB8;
+    }
 }
 
 #active__measure {
@@ -101,9 +106,81 @@
 	font-weight: 100;
 }
 
-.frame {
-	background-color: #4d545a;
+.background__container {
+  background-image: url('https://res.cloudinary.com/skytreep/image/upload/v1552589614/Free-Forest-Background-Vector-1.jpg');
+  background-color: rgba(255,0,0,0.4);
+  background-position: top center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+
+
+.position__upper {
+    position: absolute;
+    right: -17px;
+    bottom: 29px;
+    font-size: 16px;
+}
+
+.position__lower {
+    position: absolute;
+    left: -17px;
+    bottom: 29px;
+    font-size: 16px;
+}
+
+.position__square {
+    width: 9px;
+    height: 30px;
+    border-radius: 3px;
+    margin-right: 9px;
+    background-color: #36ACB8;
+    position: absolute;
+    top: -7px;
+    left: -3px;
+}
+
+
+.participation__treep {
+    position: absolute;
+    border: 3px solid;
+    width: 32%;
+    height: 20px;
+    top: 35px;
+    left: 5px;
+    border-bottom: none;
+
+    p {
+      text-align: center;
+    }
+}
+
+.participation__user {
+    position: absolute;
+    border: 3px solid;
+    width: 60%;
+    height: 20px;
+    top: 35px;
+    right: 4px;
+    border-bottom: none;
+
+    p {
+      text-align: center;
+    }
+}
+
+
+.end__square {
+    width: 9px;
+    height: 30px;
+    background-color: #00C896;
+    border-radius: 3px;
+    position: absolute;
+    top: -7px;
+    right: -6px;
+}
+
+
 
 
 
