--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -56,13 +56,108 @@ body, html {
 
 
 
-
 #section2 {
   background-image: url('https://res.cloudinary.com/tark-industries/image/upload/v1548672355/bluesquare.png');
   background-position: top center;
   background-repeat: no-repeat;
-  min-height: 145vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
+.container__solution {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 40px;
+}
+
+.container__explications {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 30px;
+}
+
+.ticket {
+  img {
+  width: 350px;
+  }
+}
+
+.home__frame {
+  width: 80%;
+  margin: auto;
+}
+
+.solution {
+  width: 550px;
+}
+
+.number {
+  width: 80px;
+}
+
+.explication__1 {
+  margin-right: 15px;
+  width: 450px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  h4 {
+    color: $green;
+    margin: 0;
+    margin-bottom: 15px;
+  }
+
+  h5 {
+    margin: 10px 0;
+    text-align: justify;
+  }
+}
+
+.explication__2 {
+  margin-left: 15px;
+  height: 300px;
+  width: 450px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  h4 {
+    color: $green;
+    margin: 0;
+  }
+
+  h5 {
+    margin: 0;
+  }
+}
+
+.boutons__explication {
+  display: flex;
+  justify-content: left;
+}
+
+.tooltip.in{opacity:1!important;}
+
+.tooltip.bottom .tooltip-arrow {
+  top: 0;
+  left: 50%;
+  margin-left: -5px;
+  border-bottom-color: white; /* black */
+  border-width: 0 5px 5px;
+}
+
+.white-tooltip + .tooltip > .tooltip-inner {background-color: white ;}
+
+.tooltip-inner {
+  color: black;
+  max-width: 500px;
+  text-align: justify;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0px 2px 10px grey;
+}  
 
 .logo-vert img {
   display: block;
@@ -85,6 +180,8 @@ body, html {
 .def-dette {
   font-weight: 700;
   color: $green;
+  font-size: 20px;
+  text-align: justify;
 }
 
 .explications1et2 img {
@@ -112,6 +209,8 @@ body, html {
 .section2-button {
   background-color: $green;
   padding: 8px 13px;
+  margin: 5px;
+  margin-left: 0px;
   color: white;
   border-radius: 3px;
   font-size: 16px;
@@ -158,6 +257,8 @@ body, html {
   margin-left: 200px !important;
 }
 
+
+
 /* BUTTON PART */
 
 
@@ -173,7 +274,9 @@ body, html {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  min-height: 70vh;
+  display: flex;
+  flex-direction: column;
+  padding: 0px 0px 35px 60px;
   color: white;
   position: relative;
 }
@@ -193,7 +296,7 @@ body, html {
   color: white;
 }
 
-#section3 .container {
+#section3 .container-home {
   margin-left: 5vw !important;
 }
 
