Filter search implemented, need to add the prices for each square

--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -43,10 +43,13 @@
 	<div class="flights__options">
 		
 	</div>
-
-	<div class="flights__display">
-	  <ul class="flights__list"></ul>
-	</div>
+    <div class="flights__second__container">
+        <div class="flights__filter__display">
+        </div>
+    	<div class="flights__display">
+    	  <ul class="flights__list"></ul>
+    	</div>
+    </div>
 </div>
 
 <div id='searchPage'></div>
