--- a/app/assets/stylesheets/pages/_search.scss
+++ b/app/assets/stylesheets/pages/_search.scss
@@ -6,10 +6,15 @@
 
 
 .flights__container {
+  width: 81%;
+  margin: auto;
 	display: flex;
 	justify-content: space-around;
 }
 
+.flights__options {
+  margin-top: 20px;
+}
 
 .container {
 	width: 200px;
