--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,1 +1,29 @@
-<h1 class="okko">hey</h1>
+<div class="dashboard">
+  <div class="row">
+    <div class="col-1"></div> <!-- Cette column sert de padding left pour la column qui suit, c'est un offset -->
+    <div class="col-4">
+
+      <img class="avatar-dash" src="https://res.cloudinary.com/tark-industries/image/upload/v1553179848/default_avatar.png">
+
+      <h3 class="hello-dash">Bonjour !</h3>
+
+      <div class="menu-dash">
+        <div class="onglet1">
+          <i style="width: 30px" class="onglet-item fas fa-user-ninja"></i>
+          <h5 class="onglet-item">Mes infos</h5>
+          <img class="onglet-item" src="https://res.cloudinary.com/tark-industries/image/upload/v1553183193/Arrow_SKYTREEP_right.png">
+        </div>
+
+        <div class="onglet2">
+          <i style="width: 30px" class="onglet-item fas fa-leaf"></i>
+          <h5 class="onglet-item">Mes dettes écologiques / voyages</h5>
+          <img class="onglet-item" src="https://res.cloudinary.com/tark-industries/image/upload/v1553183193/Arrow_SKYTREEP_right.png">
+        </div>
+      </div>
+    </div>
+
+    <div class="col-7">
+      <h1>Hey</h1>
+    </div>
+  </div>
+</div>
