--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,4 +1,12 @@
 <div class="dashboard">
+
+  <div class="background-dash"><img src="https://res.cloudinary.com/tark-industries/image/upload/v1553191549/Frame_dash.png"></div>
+
+  <div class="compteur-arbres-dash">
+    <img src="https://res.cloudinary.com/tark-industries/image/upload/v1553192647/Arbre.png">
+    <h3>001</h3>
+  </div>
+
   <div class="row">
     <div class="col-1"></div> <!-- Cette column sert de padding left pour la column qui suit, c'est un offset -->
     <div class="col-4">
@@ -22,8 +30,104 @@
       </div>
     </div>
 
-    <div class="col-7">
-      <h1>Hey</h1>
+    <!-- /* FIN DU MENU CENTRAL */
+
+
+    /* DEBUT DU MENU INFO */ -->
+
+    <!-- <div class="col-7 menu-info-dash">
+      <h5 class="sous-menu-info-dash">Compte</h5>
+
+      <div class="row">
+        <div class="col-2">
+          <h6 class="info-item1">Email</h6>
+        </div>
+        <div class="col-1"></div> --> <!-- Encore une fois c'est pour faire du padding -->
+        <!-- <div class="col-5">
+          <h6 class="info-item2">Tanguycolou@hotmail.fr</h6>
+        </div>
+        <div class="col-4">
+          <h6 class="info-item3">Changer mon email</h6>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-2">
+          <h6 class="info-item1">Password</h6>
+        </div>
+        <div class="col-1"></div> --> <!-- Encore une fois c'est pour faire du padding -->
+        <!-- <div class="col-5">
+          <h6 class="info-item2">**********</h6>
+        </div>
+        <div class="col-4">
+          <h6 class="info-item3">Changer mon password</h6>
+        </div>
+      </div>
+
+      <h5 style="padding-top: 40px" class="sous-menu-info-dash">A propos de moi</h5>
+
+      <div class="row">
+        <div class="col-2">
+          <h6 class="info-item1">Nom</h6>
+        </div>
+        <div class="col-1"></div> --> <!-- Encore une fois c'est pour faire du padding -->
+        <!-- <div class="col-5">
+          <h6 class="info-item2">n/a</h6>
+        </div>
+        <div class="col-4">
+          <h6 class="info-item3">Changer mon nom</h6>
+        </div>
+      </div>
+
+      <h6 class="delete-account">Supprimer mon compte</h6>
+
+    </div> -->
+
+
+    <!-- /* FIN DU MENU INFO */
+
+
+    /* DEBUT DU MENU VOYAGE */ -->
+
+    <div class="col-7 menu-voyage-dash">
+      <div class="row">
+
+        <div class="col-6 voyage-card ">
+          <img src="https://res.cloudinary.com/tark-industries/image/upload/v1553263213/SKYTREEP_CARD_VOYAGE.png">
+        </div>
+
+        <div class="col-6 voyage-card">
+          <img src="https://res.cloudinary.com/tark-industries/image/upload/v1553263213/SKYTREEP_CARD_VOYAGE.png">
+        </div>
+      </div>
     </div>
+
+
   </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
