--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
     </div>
 
     <div class="slogan">
-      <h1>Le premier comparateur <br> pour une empreinte <br>écologique neutre</h1>
+      <h1>Plantez des arbres <br> en réservant <br> vos billets d'avions<br></h1>
     </div>
 
     <%= render 'shared/searchbar' %>
@@ -21,16 +21,22 @@
       <img src="https://res.cloudinary.com/tark-industries/image/upload/v1548672018/forest_back.png">
     </div>
   </div>
-  
+
+
+
   <div id="section2">
     <div class= "home__frame">
-      <div class="logo-vert">
-        <img src="https://res.cloudinary.com/tark-industries/image/upload/v1548508989/LOGO_TREEP_VERT.png">
+      <div class="logo-ccm">
+        <img src="https://res.cloudinary.com/tark-industries/image/upload/v1553080753/LOGO_SKYTREEP.png">
       </div>
 
       <div class="ccm">
         <h5>Comment ça marche ?</h5>
       </div>
+
+      <div class="section-video">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/1HzxlcrLHQ0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 
       <div class="container__solution">
 
@@ -105,7 +111,7 @@
       <a href="https://www.instagram.com/"><img src="https://res.cloudinary.com/tark-industries/image/upload/v1548766811/insta-treep.png"></a> <br>
       <a href="https://twitter.com/"><img src="https://res.cloudinary.com/tark-industries/image/upload/v1548766819/tweeter-treep.png"></a> <br>
     </div>
-    
+
     <div class="container-footer1">
       <div class="row">
         <div class="col-sm-3">
