--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -13,8 +13,8 @@ ul li, ul li li {
 }
 
 ul .li-before {
-  padding-right: 1.4vw;
-  padding-left: 1.4vw;
+  padding-right: 1.6vw;
+  padding-left: 1.6vw;
   padding-top: 35px;
 }
 
@@ -39,7 +39,8 @@ li a {
 }
 
 .liste-navbar .logo img {
-  width: 150px;
+  width: 200px;
+  margin-right: 8vw;
 }
 
 .fr-flag {
