--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -68,9 +68,9 @@ body, html {
 
 
 #section2 {
-  background-image: url('https://res.cloudinary.com/tark-industries/image/upload/v1548672355/bluesquare.png');
-  background-position: top center;
-  background-repeat: no-repeat;
+  background-image: url('https://res.cloudinary.com/tark-industries/image/upload/v1554914260/bluesquare.png');
+  background-size: cover;
+  background-repeat: repeat-y;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -104,7 +104,7 @@ body, html {
 }
 
 .number {
-  width: 80px;
+  width: 50px;
 }
 
 .explication__1 {
@@ -170,17 +170,19 @@ body, html {
   box-shadow: 0px 2px 10px grey;
 }
 
+
 .logo-ccm img {
   display: block;
-  width: 30%;
+  width: 24%;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 50px;
+  padding-top: 30px;
 }
 
 .ccm h5 {
   text-align: center;
-  padding-bottom: 20px
+  padding-bottom: 10px;
+  margin-top: -10px;
 }
 
 .section-video {
