--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
 
     <div class="compteur-arbres">
       <h2>10,762</h2>
-      <h5>D'arbres plantés par les utilisateurs de TREEP</h5>
+      <h5>D'arbres plantés par les utilisateurs de SKYTREE'P</h5>
       <img src="https://res.cloudinary.com/tark-industries/image/upload/v1548505333/arrow_treep.png">
     </div>
 
@@ -46,7 +46,7 @@
 
         <div class="solution">
           <h4>Notre solution: la dette écologique</h4>
-          <h5 style="text-align:justify;">Pour chaque trajet, Treep calcule le nombre de km, le modèle de l’avion et sa consommation puis en déduit le rejet de Co2 par passager.</h5>
+          <h5 style="text-align:justify;">Pour chaque trajet, Skytree'p calcule le nombre de km, le modèle de l’avion et sa consommation puis en déduit le rejet de Co2 par passager.</h5>
           <h5 class="def-dette">La dette écologique c’est le prix du nombre d’arbres nécessaire pour compenser les rejets de Co2 d’un voyage.</h5>
         </div>
 
@@ -55,13 +55,13 @@
       <div class="container__explications">
 
         <div class="explication__1">
-          <div style="text-align:center;margin-bottom: 17px;">
+          <div style="text-align:center;margin-bottom: 17px;margin-top: -20px">
             <img class="number" src="https://res.cloudinary.com/tark-industries/image/upload/v1548514473/treep_expl1.png">
           </div>
-          <h4>Treep paye une partie de votre dette écologique.</h4>
-          <h5>Lorsque vous passez par Treep, vous avez déja fait un pas.</h5>
-          <h5>En effet une partie de votre dette est financée par les commissions que Treep perçoit lorsque vous réservez votre billet.
-          Environ 6% de votre dette est automatiquement prise en charge par Treep.</h5>
+          <h4>Skytree'p paye une partie de votre dette écologique.</h4>
+          <h5>Lorsque vous passez par Skytree'p, vous avez déja fait un pas.</h5>
+          <h5>En effet une partie de votre dette est financée par les commissions que Skytree'p perçoit lorsque vous réservez votre billet.
+          Environ 6% de votre dette est automatiquement prise en charge par Skytree'p.</h5>
           <div class="boutons__explication" style="margin-top: 10px;">
             <a class="section2-button white-tooltip" href="#" data-toggle="tooltip" data-html="true" data-placement="bottom" title="<h6>Nous plantons des arbres avec 80% de nos bénefices !</h6>
             <p>Lorsque vous selectionnez un billet, vous êtes redirigé chez l’un de nos partenaires. Pour ce service, Treep gagne environ 2,2% du prix de votre billet. Avec 80% des bénefices que chaque utilisateur nous rapporte, nous commençons le paiement de sa dette écologique. Donc en passant par Treep vous avez déjà commencé a rembourser la planète ! <br>
@@ -72,19 +72,19 @@
             <p>En effet à chaque fois que nous vous redirigeons vers une compagnie aérienne ou une agence de voyage, celle-ci nous rémunère en retour. C'est entre 1 et 3% du prix de votre billet. Mais vous le savez déjà, nos bénéfices permettent de financer une partie de votre dette écologique.
             D'autre part nous gagnons aussi de l'argent grâce aux publicitées. <br>
             Cliquez sur le boutton pour pouvoir acceder à nos rapports financiers.</p>">
-              Les revenues de Treep
+              Les revenues de Skytree'p
             </a>
           </div>
         </div>
 
         <div class="explication__2">
           <div>
-            <div style="text-align:center;margin-bottom: 17px;">
+            <div style="text-align:center;margin-bottom: 17px;margin-top: -20px">
               <img class="number" src="https://res.cloudinary.com/tark-industries/image/upload/v1548514472/treep_expl2.png">
             </div>
             <h4>Vous avez le choix !<br>Votre dette est entre vos seules mains.</h4>
           </div>
-          <h5>Dès lors que Treep à rempli sa mission, le reste est entre vos mains, vous pouvez remboursez partiellement ou entièrement votre dette écologique!</h5>
+          <h5>Dès lors que Skytree'p à rempli sa mission, le reste est entre vos mains, vous pouvez remboursez partiellement ou entièrement votre dette écologique!</h5>
           <div class="boutons__explication">
             <a class="section2-button white-tooltip" href="#" data-toggle="tooltip" data-html="true" data-placement="bottom" title="
             <h6>Des meilleurs calculs a venir!</h6>
@@ -129,7 +129,7 @@
       </div>
       <div style="padding-top: 20px" class="row">
         <div class="col-sm">
-          <a href="#">Comment fonctionne Treep ?</a>
+          <a href="#">Comment fonctionne Skytree'p ?</a>
         </div>
         <div class="col-sm">
           <a href="#">Politique de confidentialité de cookies</a>
@@ -226,13 +226,13 @@
           <p>Conditions générales</p>
         </div>
         <div style="text-align: center" class="col-sm">
-          <p>©Treep 2019</p>
+          <p>©Skytree'p 2019</p>
         </div>
       </div>
     </div>
 
     <div class="text-footer">
-    <p>Trouvez votre voyage sur Treep.com, Comparez parmis des centaines de fournisseurs pour avoir les meilleurs prix et ce chaque jour. Trouvez des vols pas cher et écologique. Tous les billets internationaux sont disponibles, recherchez parmis les compagnies aériennes les plus prisées et les plus populaires. Treep c’est la garantie de trouver le billet d’avion qu'il vous faut. N’attendez plus pour découvrir toute nos destinations. </p>
+    <p>Trouvez votre voyage sur Skytreep.com, Comparez parmis des centaines de fournisseurs pour avoir les meilleurs prix et ce chaque jour. Trouvez des vols pas cher et écologique. Tous les billets internationaux sont disponibles, recherchez parmis les compagnies aériennes les plus prisées et les plus populaires. Skytree'p c’est la garantie de trouver le billet d’avion qu'il vous faut. N’attendez plus pour découvrir toute nos destinations. </p>
     </div>
 
   </div>
