--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -339,7 +339,8 @@ body, html {
 .text-footer p {
   text-align: center;
   font-size: 12px;
-  padding: 0px 15%;
+  padding-right: 16%;
+  padding-left: 10%;
   margin-bottom: 0px;
 }
 
