--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -218,14 +218,14 @@
     </div>
 
     <div class="container-footer3">
-      <div class="row">
+      <div style="margin-left: -7%;" class="row">
         <div class="col-sm">
           <p>Confidentialité</p>
         </div>
         <div class="col-sm">
           <p>Conditions générales</p>
         </div>
-        <div style="text-align: center" class="col-sm">
+        <div class="col-sm">
           <p>©Skytree'p 2019</p>
         </div>
       </div>
