--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,10 +1,6 @@
 <div class="rectangle-navbar">
     <ul class="liste-navbar">
 
-      <li class="logo">
-        <img src="https://res.cloudinary.com/tark-industries/image/upload/v1553080750/LOGO_SKYTREEP_BLANC.png">
-      </li>
-
       <li class="li-before">
        <li><i class="fas fa-plane"></i></li>
        <li><a href="#">Vols</a></li>
@@ -38,4 +34,9 @@
      </li>
 
     </ul>
+
+      <div class="logo-nav1">
+        <img src="https://res.cloudinary.com/tark-industries/image/upload/v1553080750/LOGO_SKYTREEP_BLANC.png">
+      </div>
+
   </div>
