--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -31,15 +31,22 @@ li a {
 }
 
 .liste-navbar {
-  padding-left: 10vw;
+  padding-left: 35vw;
   padding-right: 3vw;
   background-color: rgb(0, 200, 150);
   height: 60px;
+  padding-top: 15px;
 }
 
-.liste-navbar .logo img {
+.logo-nav1 {
+  height: 0px;
+}
+
+.logo-nav1 img {
   width: 200px;
   margin-right: 8vw;
+  margin-top: -75px;
+  margin-left: 5vw;
 }
 
 .fr-flag {
