--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,13 +9,13 @@
 
       <li class="li-before">
        <li><i class="far fa-lightbulb"></i></li>
-       <li><a href="#">A propos</a></li>
+       <li><a href="http://localhost:3000/about">A propos</a></li>
      </li>
 
 
       <li class="li-before">
        <li><i class="fas fa-tree"></i></li>
-       <li><a href="#">Les arbres</a></li>
+       <li><a href="http://localhost:3000/lesarbres">Les arbres</a></li>
      </li>
 
       <li class="li-before">
