footer all done

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,6 @@
     <%= javascript_pack_tag 'application' %>
 
     <%= render 'shared/footer' if @footer1 %>
-    <%= render 'shared/footer' if @footer2 %>
+    <%= render 'shared/footer2' if @footer2 %>
   </body>
 </html>
