--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -36,7 +36,9 @@
     </ul>
 
       <div class="logo-nav1">
-        <img src="https://res.cloudinary.com/tark-industries/image/upload/v1553080750/LOGO_SKYTREEP_BLANC.png">
+        <a href="http://localhost:3000">
+          <img src="https://res.cloudinary.com/tark-industries/image/upload/v1553080750/LOGO_SKYTREEP_BLANC.png">
+        </a>
       </div>
 
   </div>
