--- a/app/views/pages/lesarbres.html.erb
+++ b/app/views/pages/lesarbres.html.erb
@@ -5,19 +5,19 @@
 
       <li class="li-before">
        <li><i class="fas fa-plane"></i></li>
-       <li><a href="#">Vols</a></li>
+       <li><a href="http://localhost:3000/search">Vols</a></li>
      </li>
 
 
       <li class="li-before">
        <li><i class="far fa-lightbulb"></i></li>
-       <li><a href="#">A propos</a></li>
+       <li><a href="http://localhost:3000/about">A propos</a></li>
      </li>
 
 
       <li class="li-before">
        <li><i class="fas fa-tree"></i></li>
-       <li><a href="#">Les arbres</a></li>
+       <li><a href="http://localhost:3000/lesarbres">Les arbres</a></li>
      </li>
 
       <li class="li-before">
@@ -38,7 +38,9 @@
     </ul>
 
       <div class="logo">
-        <img src="https://res.cloudinary.com/tark-industries/image/upload/v1553080750/LOGO_SKYTREEP_BLANC.png">
+        <a href="http://localhost:3000">
+          <img src="https://res.cloudinary.com/tark-industries/image/upload/v1553080750/LOGO_SKYTREEP_BLANC.png">
+        </a>
       </div>
 
 
