--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,5 +25,7 @@
 
     <%= render 'shared/footer' if @footer1 %>
     <%= render 'shared/footer2' if @footer2 %>
+    <%= render 'shared/nophone' %>
+
   </body>
 </html>
