--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -40,6 +40,7 @@
 <datalist id="airports__return"></datalist>
 
 <div class="flights__container">
+    <%= image_tag("loading__spinner.png", :class => "loader") %>
 	<div class="flights__options">
 		
 	</div>
