--- a/app/assets/stylesheets/components/_filter-search.scss
+++ b/app/assets/stylesheets/components/_filter-search.scss
@@ -12,7 +12,7 @@
 }
 
 .filter__square {
-	width: 33%;
+	width: (100% / 3);
 	height: 100%;
 	background-color: $green;
 	margin: 0.5px;
@@ -37,14 +37,3 @@
 	background-color: #36ACB8;
 }
 
-.loader {
-  margin: 5rem auto; 
-  text-align: center; 
-
-  svg {
-    height: 5.5rem;
-    width: 5.5rem;
-    fill: #F59A83;
-    transform-origin: 44% 50%;
-    animation: rotate 1.5s infinite linear; }
-}
