--- a/app/assets/stylesheets/pages/_search.scss
+++ b/app/assets/stylesheets/pages/_search.scss
@@ -6,18 +6,18 @@
 
 
 .flights__container {
-  width: 81%;
-  margin: auto;
+  width: 85%;
 	display: flex;
 	justify-content: space-around;
 }
 
 .flights__options {
-  margin-top: 20px;
+  margin: 30px;
+  margin-top: 120px;
 }
 
 .container {
-	width: 200px;
+	width: 250px;
 }
 
 
@@ -27,7 +27,9 @@
 }
 
 .flight__card {
-  margin: 25px auto;
+  width: 100%;
+  margin-top: 20px;
+  margin-bottom: 10px;
   background: #FFFFFF;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
@@ -66,10 +68,6 @@
 
 .flight__card__header {
   margin-bottom: 20px;
-}
-
-.flight__flex {
-  display: flex;
 }
 
 .straight {
