--- a/app/assets/stylesheets/components/_base-searchbar.scss
+++ b/app/assets/stylesheets/components/_base-searchbar.scss
@@ -16,7 +16,7 @@
 .search__bar__frame {
 	width: 100%;
 	height: 70px;
-	background-color: #00C896;
+	background: linear-gradient(98.08deg, #00C896 0%, #03B88B 28.66%, #01B386 52.65%, #00C896 78.24%, #02B88A 94.51%), #C4C4C4;
 	display: flex;
 	align-items: center;
 	justify-content: center;
