--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -29,7 +29,7 @@
 }
 
 .border-form {
-  background-color: $green;
+  background: linear-gradient(98.46deg, #00C896 0%, #03AA80 5.73%, #01AD82 23.48%, #00C896 45.3%, #00C896 71.29%, #02B88A 83%), #C4C4C4;
   margin-left: 13vw;
   width: 990px;
   border-radius: 5px;
