--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -10,7 +10,7 @@ body, html {
 
 
 #section1 {
-  background-image: url('https://res.cloudinary.com/tark-industries/image/upload/v1548345076/ballon.png');
+  background-image: url('https://res.cloudinary.com/tark-industries/image/upload/v1556390166/Ballon_ombre.png');
   background-size: auto 700px;
   background-position: top center;
   background-repeat: no-repeat;
@@ -24,7 +24,7 @@ body, html {
   color: white;
   padding-left: 13vw;
   padding-top: 50px;
-  text-shadow: .9px .9px grey;
+  /* text-shadow: .9px .9px grey; */
 }
 
 .compteur-arbres {
