--- a/app/assets/stylesheets/pages/_search.scss
+++ b/app/assets/stylesheets/pages/_search.scss
@@ -115,6 +115,10 @@
   padding: 20px 10px;
 }
 
+.flight__info img {
+  width: 120px;
+}
+
 .checkout__button {
   background-color: #00C896;
   border-radius: 3px;
@@ -122,7 +126,7 @@
   border: none;
   color: white;
   padding: 10px 50px;
-} 
+}
 
 #details {
   border-top-left-radius: 0px;
