--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -33,7 +33,7 @@ li a {
 .liste-navbar {
   padding-left: 35vw;
   padding-right: 3vw;
-  background-color: rgb(0, 200, 150);
+  background: linear-gradient(80.21deg, #00C896 0%, #03AA80 10.23%, #01AD82 22.85%, #00C896 54.58%, #00C896 85.89%, #02B88A 100%), #C4C4C4;
   height: 60px;
   padding-top: 15px;
 }
