--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,7 +1,7 @@
 // Import Google fonts
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
 @import url("https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:300");
-@import url("https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:300");
+@import url("https://fonts.googleapis.com/css?family=Carme");
 // Define fonts for body and headers
 $body-font: "Carme", "sans-serif";
 $headers-font: "Raleway", "Helvetica", "sans-serif";
